IDE: fix "downloadThenRun not pinned by hash"
Reformat the Dockerfile (this is nitpicking) and use pinned-dependencies.

This strategy is safe without the risk of possible compromised (node)
dependencies.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -2,6 +2,8 @@
 
 FROM mcr.microsoft.com/vscode/devcontainers/base:jammy@sha256:08845a02c0472bb026f9cc4bb74bccaf2039945e7a9b41c4dbcce578c1830d40
 
+ENV NODE_DOWNLOAD_SHA256="f8fb478685fb916cc70858200595a4f087304bcde1e69aa713bf2eb41695afc1"
+
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
@@ -11,13 +13,17 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
            libpocl-dev=* ocl-icd-opencl-dev=* pocl-opencl-icd=* \
            golang=* shellcheck=* \
     #
-    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && TMPFILE=$(mktemp /tmp/node-XXXXX) \
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | \
+       tee "$TMPFILE" | bash - \
+    && echo "$NODE_DOWNLOAD_SHA256  $TMPFILE" | sha256sum -c - \
     && apt-get -y install --no-install-recommends nodejs=* \
     # Clean up-
     && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
-USER vscode
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN curl --proto '=https' --tlsv1.3 https://sh.rustup.rs -sSf | bash -s -- -y
+
+USER vscode
 HEALTHCHECK NONE
