maint: update scorecard (job) policy
Since I'm seeing access errors, update the scorecard.yml output policy
as recommended by the audit log. Using the recommended policy.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -39,8 +39,10 @@ jobs:
           allowed-endpoints: >
             api.github.com:443
             api.osv.dev:443
+            api.scorecard.dev:443
             api.securityscorecards.dev:443
             fulcio.sigstore.dev:443
+            gcr.io:443
             github.com:443
             oss-fuzz-build-logs.storage.googleapis.com:443
             rekor.sigstore.dev:443
