maint: set the frequency of updates for fuzz
Define how often to check for new versions for fuzzing version manager.
The maintainer generates new versions at a very high frequency.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,11 +27,14 @@ updates:
       interval: daily
 
   - package-ecosystem: docker
-    directory: /.clusterfuzzlite
+    directory: /CI/Dockerfiles
     schedule:
       interval: daily
 
   - package-ecosystem: docker
-    directory: /CI/Dockerfiles
+    directory: /.clusterfuzzlite
     schedule:
-      interval: daily
+      interval: "weekly"
+      day: "sunday"
+    assignees:
+      - "claudioandre-br"
