--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,8 +64,8 @@ jobs:
     needs: [virustotal]
     runs-on: ubuntu-latest
     permissions:
-      # required to update the release. But it is a security issue.
-      contents: write
+      id-token: write
+      attestations: write
 
     steps:
       - name: Harden Runner
@@ -75,15 +75,22 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            fulcio.sigstore.dev:443
             github.com:443
             objects.githubusercontent.com:443
+            rekor.sigstore.dev:443
             uploads.github.com:443
 
-      - name: Generate provenance for Release
-        uses: philips-labs/slsa-provenance-action@6b2fd198d38ba72fb3cc08fbc52da2ebaef2efad # v0.9.0
+      - name: Get assets
+        uses: dsaltares/fetch-gh-release-asset@aa2ab1243d6e0d5b405b973c89fa4d06a2d0fff7 # v1.1.2
         with:
-          command: generate
-          subcommand: github-release
-          arguments: --artifact-path release-assets --output-path 'Computed-provenance.json' --tag-name ${{ github.ref_name }}
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          version: tags/${{ github.ref_name }}
+          regex: true
+          file: ".*zip$|.*7z$|Created-on.*.txt$"
+          target: local-app/
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Attest release
+        uses: actions/attest-build-provenance@951c0c5f8e375ad4efad33405ab77f7ded2358e4 # v1.1.1
+        with:
+          subject-path: "${{ github.workspace }}//local-app"
