deploy: make builds repeatable and reproducible
All package build must "lock" and get the same commit in order to
make the process of creating a package repeatable. This will force
us to change the build commit hash every time a new build occurs.

For dev packages, a temporary change will occur in the 'release' branch
whenever a new package is released. In the end, for "real releases", this
will mean committing the final commit hash to 'main'.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/Solaris-Delivery.yml
+++ b/deploy/Solaris-Delivery.yml
@@ -40,7 +40,7 @@ jobs:
       EXTRA: "full;extra"
       BUILD_OPTS: ""
       BASE: "Oracle Solaris"
-      _JUMBO_RELEASE: ${{ github.event.inputs.release }}
+      RELEASE_COMMIT: ${{ github.event.inputs.hash }}
 
     steps:
       - uses: actions/checkout@v4
@@ -48,7 +48,7 @@ jobs:
         id: test
         uses: vmactions/solaris-vm@v1
         with:
-          envs: "TARGET_ARCH EXTRA BUILD_OPTS TEST BASE"
+          envs: "TARGET_ARCH EXTRA BUILD_OPTS TEST BASE RELEASE_COMMIT"
           usesh: true
           copyback: false
           prepare: |
