--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -147,7 +147,8 @@ jobs:
             (github.event.inputs.push || false)
             }}
           build-args: |
-            TYPE="ALL"
+            TYPE=ALL
+            RELEASE_COMMIT=f9fedd238b0b1d69181c1fef033b85c787e96e57
           tags: ${{ steps.data.outputs.image_tags }}
           labels: |
             ${{ steps.meta.outputs.labels }}
