--- a/deploy/Mac_ARM-Delivery.yml
+++ b/deploy/Mac_ARM-Delivery.yml
@@ -37,6 +37,7 @@ macOS_task:
     TEST: "macOS;"
     BASE: "Apple macOS M2"
     DEPLOY_PAK: "Yes"
+    RELEASE_COMMIT: "f9fedd238b0b1d69181c1fef033b85c787e96e57"
 
   info_script: |
     git clone --depth 10 https://github.com/openwall/john.git ~/tmp
