--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -94,6 +94,9 @@ parts:
     override-pull: |
       craftctl default
 
+      # Force the build to be repeatable
+      export RELEASE_COMMIT="f9fedd238b0b1d69181c1fef033b85c787e96e57"
+
       # Get latest files from upstream repository
       wget https://raw.githubusercontent.com/openwall/john-packages/release/deploy/snap/build.sh -O build.sh
       chmod +x build.sh
