deploy: save john (upstream) repository reference
Save to the log information about the current john commit used by
the build process. Print and save for auditing.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/Windows-Delivery.yml
+++ b/deploy/Windows-Delivery.yml
@@ -126,6 +126,10 @@ steps:
       shell "echo 'libpcap=No' >> ../run/Defaults"
       shell "echo 'Other Optional Libraries=Yes' >> ../run/Defaults"
       shell "echo 'Regex, OpenMPI, Experimental Code, ZTEX=No' >> ../run/Defaults"
+      shell "echo '#' >> ../run/Defaults"
+      shell "echo '#   The john (upstream) repository reference' >> ../run/Defaults"
+      shell "echo '[Repository john]' >> ../run/Defaults"
+      shell "echo 'Commit=f9fedd238b0b1d69181c1fef033b85c787e96e57' >> ../run/Defaults"
 
       # Use symlink.c to produce a tiny john.exe that executes the best SIMD
       shell "make windows-tiny-link-to-john MAIN_NAME=$EXE_NAME "
