Docker: use `latest` tag for latest stable image
Docker's `latest` tag will mean the latest stable version released
(in our case, a rolling release) of a Docker Image.

Close #385.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -36,10 +36,10 @@ name: Docker
         description: "The image tag"
         required: true
         type: choice
-        default: "latest"
+        default: "bleeding"
         options:
+          - bleeding
           - latest
-          - rolling
       extra:
         description: "Add another image tag"
         type: string
