--- a/deploy/Solaris-Delivery.yml
+++ b/deploy/Solaris-Delivery.yml
@@ -37,10 +37,11 @@ jobs:
     name: Solaris 11
     env:
       TARGET_ARCH: "SOLARIS"
-      EXTRA: "full;extra"
+      EXTRA: "full;extra;CHECK"
       BUILD_OPTS: ""
       BASE: "Oracle Solaris"
       RELEASE_COMMIT: ${{ github.event.inputs.hash }}
+      MAKE_CMD: gmake
 
     steps:
       - uses: actions/checkout@v4
@@ -48,7 +49,7 @@ jobs:
         id: test
         uses: vmactions/solaris-vm@v1
         with:
-          envs: "TARGET_ARCH EXTRA BUILD_OPTS TEST BASE RELEASE_COMMIT"
+          envs: "TARGET_ARCH EXTRA BUILD_OPTS TEST BASE RELEASE_COMMIT MAKE_CMD"
           usesh: true
           copyback: false
           prepare: |
