snap: turn the package into a desktop application
The application will have an icon, a menu entry, and a .desktop file.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/metadata/com.openwall.John.desktop
+++ b/deploy/metadata/com.openwall.John.desktop
@@ -3,7 +3,7 @@ Version=1.5
 Type=Application
 Terminal=true
 Name=John the Ripper Community Edition
-GenericName=John the Ripper Jumbo
+GenericName=John the Ripper CE
 Comment=John the Ripper password security auditing and recovery tool
 TryExec=john
 Exec=run-john.sh
