docs: remove the name 'Jumbo'
In reality `bleeding` already implies that it is `jumbo`, therefore,
it is a pleonasm to use both identifiers.

Keep it as a historical reference, just as an indicator of something
that happened in the past.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -25,7 +25,7 @@ version: 1.9J1+2404
 
 base: core22
 confinement: strict
-grade: stable #TODO: [stable or devel] edit before release (JUMBO_RELEASE)
+grade: stable #TODO: [stable or devel] edit before release (BLEEDING_RELEASE)
 
 assumes: [snapd2.41]
 adopt-info: john-the-ripper
