--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ name: Docker
       VERSION_NAME:
         description: "The software version name"
         required: true
-        default: "1.9.0-jumbo-1+"
+        default: "1.9J1+"
       tag:
         description: "The image tag"
         required: true
@@ -106,7 +106,7 @@ jobs:
           if [[ -n "${{ github.event.inputs.extra }}" ]]; then
             image_tags+=",${{ env.REPO }}:${{ github.event.inputs.extra }}"
           fi
-          #TODO: edit before release (JUMBO_RELEASE)
+          #TODO: edit before release (BLEEDING_RELEASE)
           {
             echo "now=$(date -u)"
             echo "revision=$(git rev-parse --short=7 HEAD 2>/dev/null)"
