IDE: update base OS image to Ubuntu 24 LTS
Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/IDE/.devcontainer/Dockerfile
+++ b/IDE/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 # See here for image contents: https://github.com/microsoft/vscode-dev-containers/tree/master/containers
 
-FROM mcr.microsoft.com/vscode/devcontainers/base:jammy@sha256:02f752d42f1350e3fb5cd67f6105dcf44f8966d4364d56fdb4c0ddc1388c78e3
+FROM mcr.microsoft.com/vscode/devcontainers/base:noble@sha256:754d3744ba8e86073ab6d2e780727f6093e9d140c6de8c3b053554ee1fb38bd9
 
 ENV NODE_DOWNLOAD_SHA256="f8fb478685fb916cc70858200595a4f087304bcde1e69aa713bf2eb41695afc1"
 
