maint: change the frequency of dependency updates
Set updates to weekly to make repository management easier.
Management in the future may become much more complicated but this
change reduces the pressure on maintainers.

Also, remove the "Docker" type check performed in the root folder: there
is no Dockerfile in the main project folder.

Finally, as the ASAN/UBSAN verification runs smoothly now, there is no
need to tag me in the PR.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,37 +4,35 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: daily
-
-  - package-ecosystem: docker
-    directory: /
-    schedule:
-      interval: daily
+      interval: "weekly"
+      day: "saturday"
 
   - package-ecosystem: docker
     directory: /IDE/.devcontainer
     schedule:
-      interval: daily
+      interval: "weekly"
+      day: "saturday"
 
   - package-ecosystem: docker
     directory: /cloud-tool
     schedule:
-      interval: daily
+      interval: "weekly"
+      day: "saturday"
 
   - package-ecosystem: docker
     directory: /deploy/docker
     schedule:
-      interval: daily
+      interval: "weekly"
+      day: "saturday"
 
   - package-ecosystem: docker
     directory: /CI/Dockerfiles
     schedule:
-      interval: daily
+      interval: "weekly"
+      day: "saturday"
 
   - package-ecosystem: docker
     directory: /.clusterfuzzlite
     schedule:
       interval: "weekly"
-      day: "sunday"
-    assignees:
-      - "claudioandre-br"
+      day: "saturday"
