maint: add devcontainers to dependabot routines
It was VS Code that suggested this change. Let's assess the real impact.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -36,3 +36,9 @@ updates:
     schedule:
       interval: "weekly"
       day: "saturday"
+
+  - package-ecosystem: devcontainers
+    directory: /
+    schedule:
+      interval: "weekly"
+      day: "saturday"
