IDE: fix devcontainer by updating it to Ubuntu 24
In commit 7e2183525832986471e3b6a0a0779b09b114daff I updated the Dockerfile
but missed these adjustments.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/IDE/.devcontainer/devcontainer.json
+++ b/IDE/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 
 	"build": {
 		"dockerfile": "Dockerfile",
-		"args": { "VARIANT": "jammy" }
+		"args": { "VARIANT": "noble" }
 	},
 
 	"settings": {
