--- a/IDE/.devcontainer/devcontainer.json
+++ b/IDE/.devcontainer/devcontainer.json
@@ -1,26 +1,35 @@
 {
-	"name": "Ubuntu",
-	"remoteUser": "vscode",
-	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
-	"runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
-
-	"build": {
-		"dockerfile": "Dockerfile",
-		"args": { "VARIANT": "noble" }
-	},
-
-	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash"
-	},
-
-	"extensions": [
-		"davidanson.vscode-markdownlint",
-		"esbenp.prettier-vscode",
-		"galarius.vscode-opencl",
-		"jeff-hykin.better-cpp-syntax",
-		"ms-vscode.cpptools-extension-pack",
-		"ms-vscode.cpptools-themes",
-		"ms-vscode.cpptools",
-		"sonarsource.sonarlint-vscode"
-	]
+  "name": "Ubuntu",
+  "remoteUser": "vscode",
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind"
+  ],
+  "runArgs": [
+    "--cap-add=SYS_PTRACE",
+    "--security-opt",
+    "seccomp=unconfined"
+  ],
+  "build": {
+    "dockerfile": "Dockerfile",
+    "args": {
+      "VARIANT": "noble"
+    }
+  },
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash"
+      },
+      "extensions": [
+        "davidanson.vscode-markdownlint",
+        "esbenp.prettier-vscode",
+        "galarius.vscode-opencl",
+        "jeff-hykin.better-cpp-syntax",
+        "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.cpptools-themes",
+        "ms-vscode.cpptools",
+        "sonarsource.sonarlint-vscode"
+      ]
+    }
+  }
 }
