--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ name: Docker
       VERSION_NAME:
         description: "The software version name"
         required: true
-        default: "1.9.1-ce"
+        default: "1.9J1+"
       tag:
         description: "The image tag"
         required: true
