--- a/deploy/snap/snapcraft.yaml
+++ b/deploy/snap/snapcraft.yaml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 ---
 name: john-the-ripper
-version: 1.9J1+2404
+version: bleeding
 
 base: core24
 confinement: strict
