ci(release.yml): update the egress policy (#558)
Since I am seeing access errors in “VirusTotal Scan” job, update the
network policy in release.yml as recommended by the audit log. Using
the recommended policy.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
           egress-policy: block
           allowed-endpoints: >
             api.github.com:443
+            bigfiles.virustotal.com:443
             objects.githubusercontent.com:443
             www.virustotal.com:443
 
