--- a/CI/Dockerfiles/Dockerfile.RHUbi8
+++ b/CI/Dockerfiles/Dockerfile.RHUbi8
@@ -28,7 +28,12 @@ LABEL org.opencontainers.image.source="https://github.com/openwall/john-packages
 RUN yum -y -q update \
     && yum -y install \
         openssl-devel gmp-devel libpcap-devel bzip2-devel wget gcc git perl \
-    && useradd -U -m JtR
+    && yum clean all \
+    # Azure DevOps requires a root user
+    && useradd --uid 0 --non-unique --gid 0 -m tester
 
 ENV BASE RedHat-UBI
-CMD /bin/bash
+CMD [ "/bin/bash" ]
+
+USER tester
+HEALTHCHECK NONE
