--- a/CI/Dockerfiles/Dockerfile.UbuntuDevel
+++ b/CI/Dockerfiles/Dockerfile.UbuntuDevel
@@ -27,16 +27,18 @@ LABEL org.opencontainers.image.source="https://github.com/openwall/john-packages
 
 RUN apt-get update -qq \
     && export DEBIAN_FRONTEND="noninteractive" \
-    && apt-get install -y \
-        build-essential libssl-dev yasm libgmp-dev libpcap-dev pkg-config debhelper libnet1-dev \
-        libbz2-dev wget llvm libomp-dev zlib1g-dev git clang \
-    && useradd -U -m JtR \
+    && apt-get install -y --no-install-recommends \
+         build-essential ca-certificates clang debhelper git libbz2-dev libgmp-dev \
+         libnet1-dev libomp-dev libpcap-dev libssl-dev llvm pkg-config wget yasm zlib1g-dev \
+    && useradd -U -m tester \
 # ==================================================================
 # Clean up the image (shrink the Docker image)
 # ------------------------------------------------------------------
     && apt-get -y clean \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
-# USER JtR => it is much better to use root on Travis
 ENV BASE ubuntu
-CMD /bin/bash
+CMD [ "/bin/bash" ]
+
+USER tester
+HEALTHCHECK NONE
