ci(trivy): fix Trivy GH action permissions (#563)
I forgot to set these permissions in the original PR. Unfortunately,
access to aquasecurity's Docker image is very problematic and returns
many TOOMANYREQUESTS errors.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/trivy-rootfs.yml
+++ b/.github/workflows/trivy-rootfs.yml
@@ -34,6 +34,10 @@ jobs:
   trivy-code-security-scan:
     name: Scan rootfs
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      id-token: write
+
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
