security(ci): set permissions as read only (#564)
Declare GitHub action topLevel default permissions as read only.

Note that in order for these jobs to perform their tasks, some jobLevel
permissions need to be set to 'write'.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/build_CI.yml
+++ b/.github/workflows/build_CI.yml
@@ -29,7 +29,9 @@ name: CI Docker image
 env:
   REPO: ghcr.io/${{ github.repository_owner }}/john-ci
 
-permissions: read-all
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Build image
