--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -34,8 +34,7 @@ name: Close inactive issues
     - cron: "30 1 * * *"
 
 permissions:
-  issues: write
-  pull-requests: write
+  contents: read
 
 jobs:
   close-issues:
@@ -43,6 +42,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
+
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
