--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -23,7 +23,11 @@
 ---
 name: Greetings
 
-on: [pull_request_target, issues]
+"on":
+  pull_request_target:
+    types: [opened]
+  issues:
+    types: [opened]
 
 permissions:
   contents: read
