refactor(ci): use same patterns in YAML (#568)
Use the same way of specifying the branch in all YAML files.
Use the same way to specify the 'on' condition.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/cflite_fuzz.yml
+++ b/.github/workflows/cflite_fuzz.yml
@@ -26,8 +26,7 @@ name: ClusterFuzzLite fuzzing
   schedule:
     - cron: "0 4 * * MON"
   push:
-    branches:
-      - "fuzz"
+    branches: [fuzz]
 
 permissions:
   contents: read
