--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -30,7 +30,8 @@
 #
 # Source repository: https://github.com/actions/dependency-review-action
 name: "Dependency Review"
-"on": [pull_request]
+"on":
+  pull_request:
 
 permissions:
   contents: read
