--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -12,7 +12,7 @@ name: Scorecard supply-chain security
   schedule:
     - cron: "43 15 * * 2"
   push:
-    branches: ["main"]
+    branches: [main]
 
 permissions:
   contents: read
