refactor(approve-bot-pr.yml): change a label (#568)
The same label text was being used in two different places. This commit
fixes that.

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/approve-bot-pr.yml
+++ b/.github/workflows/approve-bot-pr.yml
@@ -21,7 +21,7 @@
 # More info at https://github.com/openwall/john-packages
 
 ---
-name: Approve PR
+name: Approve bot
 
 "on":
   pull_request_target:
