feat(ci): add Trivy misconfig scan (#577)
Add the misconfig scanner to the list of security problems to be detected.

The security group rules have been set to wide open by default. In reality,
I can't restrict them without knowing the environment the end user wants to use.

That said, we are ignoring the failure:
- Security group rule allows egress to multiple public internet addresses.

cloud-tool/security-group.tf (terraform)
========================================
Tests: 4 (SUCCESSES: 0, FAILURES: 4, EXCEPTIONS: 0)
Failures: 4 (UNKNOWN: 0, LOW: 0, MEDIUM: 0, HIGH: 0, CRITICAL: 4)

Signed-off-by: Claudio André <dev@claudioandre.slmail.me>

--- a/.github/workflows/trivy-SBOM.yml
+++ b/.github/workflows/trivy-SBOM.yml
@@ -59,7 +59,8 @@ jobs:
         uses: aquasecurity/trivy-action@915b19bbe73b92a6cf82a1bc12b087c9a19a5fe2 # 0.28.0
         with:
           scan-type: "fs"
-          scanners: vuln,secret,license
+          scanners: vuln,secret,misconfig,license
+          skip-files: cloud-tool/security-group.tf # See #577
           format: "github"
           output: "dependency-results.sbom.json"
           image-ref: "."
